tests/snapshots/conformance__y_string_surrogates_u+1d11e_musical_symbol_g_clef.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uD834\uDd1e"]
stdout --- 
["\uD834\uDd1e"]
stderr --- 
<empty>
