tests/snapshots/conformance__y_string_three-byte-utf-8.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u0821"]
stdout --- 
["\u0821"]
stderr --- 
<empty>
