tests/snapshots/conformance__y_string_two-byte-utf-8.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u0123"]
stdout --- 
["\u0123"]
stderr --- 
<empty>
