tests/snapshots/conformance__y_string_u+2028_line_sep.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[" "]
stdout --- 
[" "]
stderr --- 
<empty>
