tests/snapshots/conformance__y_string_uescaped_newline.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["new\u000Aline"]
stdout --- 
["new\u000Aline"]
stderr --- 
<empty>
