tests/snapshots/conformance__y_string_unescaped_char_delete.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[""]
stdout --- 
[""]
stderr --- 
<empty>
