tests/snapshots/conformance__y_string_unicode.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["\uA66D"]
stdout --- 
["\uA66D"]
stderr --- 
<empty>
