tests/snapshots/conformance__y_string_unicode_escaped_double_quote.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u0022"]
stdout --- 
["\u0022"]
stderr --- 
<empty>
