tests/snapshots/conformance__y_string_unicode_u+10fffe_nonchar.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["\uDBFF\uDFFE"]
stdout --- 
["\uDBFF\uDFFE"]
stderr --- 
<empty>
